fix: styling spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
 body {
-  padding: 0;
-  margin: 0;
+  padding: 0px 0px;
+  margin: 0px 0px;
 }
